# walking-teleoperation

./: .clang-format  .gitignore  CMakeLists.txt  CybSDK_Config.ini  DCM_WALKING_COORDINATOR_+_RETARGETING.xml  README.md  TAGS  compile_commands.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/scripts/: 3dRudder.xml  Faire-TeleoperationDemo-iFeel.xml  Faire-TeleoperationDemo.xml  Faire-UserRetargeting-iFeel.xml  Faire-UserRetargeting.xml  OpenXR-KynDynRetargeting.xml  OpenXRJoypad.xml  WalkingTeleoperationDumper.xml  WalkingTeleoperationUpperBodyControl.xml  Xprize-AudioRetargeting.xml  Xprize-Finals-1.xml  Xprize-Finals-2.xml  Xprize-Finals-3.xml  Xprize-Finals-4.xml  Xprize-Finals.xml  Xprize-HapticGlove.xml  Xprize-KynDynRetargeting.xml  Xprize-OperatorCommunications.xml  Xprize-SkinUtils.xml  (+37 more)
cmake/: AddClangFormatTarget.cmake  AddInstallRPATHSupport.cmake  FindCybSDK.cmake  FindSENSEGLOVE.cmake  FindSRanipalSDK.cmake  FindSenseGlove.cmake  InstallIniFiles.cmake  WalkingTeleoperationFindDependencies.cmake
docs/: Dependencies.md  FrameDescriptions.md
libraries/: CMakeLists.txt
libraries/ML/: CMakeLists.txt
libraries/ML/include/walking-teleoperation/ML/: KMean.h
libraries/ML/src/: KMean.cpp
modules/: CMakeLists.txt
modules/Common/: CMakeLists.txt
modules/Common/include/: FingersRetargeting.hpp  HeadRetargeting.hpp
modules/Common/src/: FingersRetargeting.cpp  HeadRetargeting.cpp
modules/FaceExpressions_module/: CMakeLists.txt  README.md
modules/FaceExpressions_module/include/: FaceExpressionsRetargeting.hpp
modules/FaceExpressions_module/src/: FaceExpressionsRetargeting.cpp  main.cpp
modules/HapticGlove_module/: CMakeLists.txt
modules/HapticGlove_module/include/: BilateralTeleoperation.hpp  ControlHelper.hpp  GloveControlHelper.hpp  GloveWearable.hpp  HapticGloveFingersRetargeting.hpp  HapticGloveFingersRetargeting.hpp.autosave  HapticGloveModule.hpp  HapticGloveRetargetingController.hpp  HapticGloveRobotControlHelper.hpp  KalmanFilter.hpp  LinearRegression.hpp  Logger.hpp  MotorEstimation.hpp  Retargeting.hpp  Retargeting.hpp.autosave  RobotControlHelper_hapticGlove.hpp  RobotControlInterface_hapticGlove.hpp  RobotController.hpp  RobotController_hapticGlove.hpp  RobotInterface.hpp  RobotMotorsEstimation.hpp  RobotSkin.hpp  Teleoperation.hpp
modules/HapticGlove_module/src/: BilateralTeleoperation.cpp  ControlHelper.cpp  GloveControlHelper.cpp  GloveWearable.cpp  HapticGloveFingersRetargeting.cpp  HapticGloveFingersRetargeting.cpp.autosave  HapticGloveModule.cpp  HapticGloveRetargetingController.cpp  HapticGloveRobotControlHelper.cpp  KalmanFilter.cpp  LinearRegression.cpp  Logger.cpp  MotorEstimation.cpp  Retargeting.cpp  RobotControlHelper_hapticGlove.cpp  RobotControlHelper_hapticGlove.cpp.autosave  RobotControlInterface_hapticGlove.cpp  RobotControlInterface_hapticGlove.cpp.autosave  RobotController.cpp  RobotController_hapticGlove.cpp  RobotInterface.cpp  RobotMotorsEstimation.cpp  RobotSkin.cpp  Teleoperation.cpp  main.cpp
modules/HapticGlove_module/thrift/: HapticGloveService.thrift  HapticGloveTeleoperationService.thrift  RobotSkinService.thrift
modules/ObjectDistance_module/: CMakeLists.txt
modules/ObjectDistance_module/include/: ObjectDistanceModule.hpp
modules/ObjectDistance_module/src/: ObjectDistanceModule.cpp  main.cpp
modules/Oculus_module/: CMakeLists.txt
modules/Oculus_module/include/: #HandRetargeting.hpp#  #RobotControlHelper.hpp#  .#RobotControlHelper.hpp  FingersRetargeting.hpp  HandRetargeting.hpp  HeadRetargeting.hpp  OculusModule.hpp  RetargetingController.hpp  RetargetingHelper.hpp  RobotControlHelper.hpp  TorsoRetargeting.hpp  WholeBodyRetargeting.hpp
modules/Oculus_module/src/: FingersRetargeting.cpp  HandRetargeting.cpp  HeadRetargeting.cpp  OculusModule.cpp  RetargetingController.cpp  RetargetingHelper.cpp  RobotControlHelper.cpp  TorsoRetargeting.cpp  main.cpp  wholebodyretargeting.cpp
modules/Oculus_module/thrifts/: TeleoperationCommands.thrift
modules/OpenXRJoypad_module/: CMakeLists.txt
modules/OpenXRJoypad_module/include/: OpenXRJoypadModule.hpp
modules/OpenXRJoypad_module/src/: OpenXRJoypadModule.cpp  main.cpp
modules/OpenXR_module/: CMakeLists.txt
modules/OpenXR_module/config/robots/iCubGazeboV3/: leftHandRetargetingParams.ini  openXRConfig.ini
modules/OpenXR_module/config/robots/iCubGenova09/: leftFingersRetargetingParams.ini  openXRConfig.ini  rightFingersRetargetingParams.ini
modules/OpenXR_module/include/: OpenXRModule.hpp
modules/OpenXR_module/src/: OpenXRModule.cpp  main.cpp
modules/SRanipal_module/: CMakeLists.txt  README.md
modules/SRanipal_module/include/: AdvancedJoypad.hpp  EyelidsRetargeting.hpp  FaceExpressionsRetargeting.hpp  GazeRetargeting.hpp  SRanipalInterface.hpp  SRanipalModule.hpp  VRInterface.hpp
modules/SRanipal_module/src/: AdvancedJoypad.cpp  EyelidsRetargeting.cpp  FaceExpressionsRetargeting.cpp  GazeRetargeting.cpp  SRanipalInterface.cpp  SRanipalModule.cpp  VRInterface.cpp  main.cpp
modules/Utils/: CMakeLists.txt
modules/Utils/include/: Utils.hpp  Utils.tpp
modules/Utils/src/: Utils.cpp
modules/Virtualizer_module/: CMakeLists.txt
modules/Virtualizer_module/CybSDK/include/: CVirt.h  CVirtDevice.h  CVirtDeviceNative.h  CVirtMaths.h  stdafx.h  targetver.h
modules/Virtualizer_module/CybSDK/src/: CVirt.cpp  CVirtDevice.cpp  CVirtDeviceNative.cpp  CVirtMaths.cpp
modules/Virtualizer_module/include/: VirtualizerModule.hpp
modules/Virtualizer_module/src/: VirtualizerModule.cpp  main.cpp
modules/Virtualizer_module/thrift/: virtualizerCommand.thrift
modules/WBRetargeting_module/: CMakeLists.txt
modules/WBRetargeting_module/include/: HeadRetargeting.hpp  OculusModule.hpp  RobotControlHelper.hpp  WholeBodyRetargeting.hpp
modules/WBRetargeting_module/src/: FingersRetargeting.cpp  HandRetargeting.cpp  OculusModule.cpp  WholeBodyRetargeting.cpp  main.cpp
modules/Xsens_module/: CMakeLists.txt
modules/Xsens_module/include/: XsensRetargeting.hpp
modules/Xsens_module/src/: XsensRetargeting.cpp  main.cpp
(+88 files in other folders)
